fix: reduce z-index of HeaderBar and apply top offset to header components

--- a/resources/js/assets/sass/header.scss
+++ b/resources/js/assets/sass/header.scss
@@ -3,6 +3,7 @@
     -webkit-backdrop-filter: blur(3px) brightness(100%) saturate(87.5%) hue-rotate(10deg) !important;
     box-shadow: inset 1px 0 0 rgba(255, 255, 255, 0.32), inset -1px 0 2px rgba(0, 0, 0, 0.16) !important;
     background: linear-gradient(90deg, rgba(17, 17, 17, 0.3) 0%, rgba(0, 90, 150, 0.8) 100%) !important;
+    top: 110px !important;
 }
 
 .css-1xomo8h-MuiPaper-root-MuiPopover-paper-MuiMenu-paper {
@@ -10,6 +11,7 @@
     -webkit-backdrop-filter: blur(3px) brightness(100%) saturate(87.5%) hue-rotate(10deg) !important;
     box-shadow: inset 1px 0 0 rgba(255, 255, 255, 0.32), inset -1px 0 2px rgba(0, 0, 0, 0.16) !important;
     background: linear-gradient(90deg, rgba(17, 17, 17, 0.3) 0%, rgba(0, 90, 150, 0.8) 100%) !important;
+    top: 110px !important;
 }
 
 .css-81kwad {
@@ -17,4 +19,5 @@
     -webkit-backdrop-filter: blur(3px) brightness(100%) saturate(87.5%) hue-rotate(10deg) !important;
     box-shadow: inset 1px 0 0 rgba(255, 255, 255, 0.32), inset -1px 0 2px rgba(0, 0, 0, 0.16) !important;
     background: linear-gradient(90deg, rgba(17, 17, 17, 0.3) 0%, rgba(0, 90, 150, 0.8) 100%) !important;
+    top: 110px !important;
 }
